--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -16,16 +16,16 @@ html, body {
 div.header {
   width: 100%;
   height: 100px;
-  padding: 25px 25px 25px 25px;
+  padding: 25px;
 }
 
-nav{
-  width: 100%;
-  /* height: 40px; */
-  float: left;
+nav {
+  width: auto;
+  float: right;
   color: #fff;
-  font-weight:bold;
-  text-align: right;
+  font-weight: bold;
+  text-align: center;
+  padding: 25px;
 }
 
 nav > a {
@@ -38,7 +38,13 @@ a {
   color: black;
 }
 
-ul{
+nav ul li{
+    display: inline-block;
+    list-style-type: none;
+    padding-left: 60px;
+}
+
+ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
