--- a/assets/stylesheets/tour.css
+++ b/assets/stylesheets/tour.css
@@ -7,18 +7,12 @@ body{
 }
 
 ul {
-  position: fixed;
-  top: 0;
   width: 100%;
   color: white;
 }
 
-nav{
-  width: 100%;
-  height: 40px;
-  float: left;
-  padding: 5px 10px;
-  color: #fff;
+.nav a{
+  float: right;
 }
 
 th, td {
@@ -29,6 +23,10 @@ th, td {
 table, h1, p {
   color: white;
   font-size: 16px
+}
+
+table{
+  width: 80%;
 }
 
 h1 {
@@ -48,4 +46,10 @@ div.ticket-icon {
 
 a {
   color: white;
+}
+
+/* How do I make the ticket icon bigger? */
+.fa fa-ticket {
+  width: 50px;
+  height: 50px;
 }
