--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,9 +1,14 @@
 #myVideo {
-  position: relative;
+  /* position: relative;
   right: 20;
   bottom: 0;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100%; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .header {
