--- a/assets/stylesheets/store.css
+++ b/assets/stylesheets/store.css
@@ -1,9 +1,13 @@
 .container {
   overflow: hidden;
+  width: auto;
 }
 
-.myBtnContainer{
+#myBtnContainer{
   margin: 0 auto;
+  width: 300px;
+  float: left;
+  padding-left: 60px;
 }
 
 img.items {
@@ -14,13 +18,14 @@ img.items {
 
 .filterDiv {
   float: left;
-  background-color: #2196F3;
+  background-color: #ffffff;
   color: #ffffff;
-  width: 100px;
-  line-height: 100px;
+  width: 250px;
+  line-height: 5px;
   text-align: center;
   margin: 2px;
-  display: inline; /* Hidden by default */
+  padding: 10px;
+  display: none; /* Hidden by default */
 }
 
 /* The "show" class is added to the filtered elements */
@@ -35,6 +40,7 @@ img.items {
   padding: 12px 16px;
   background-color: #f1f1f1;
   cursor: pointer;
+  display: block;
 }
 
 /* Add a light grey background on mouse-over */
@@ -52,4 +58,8 @@ img.items {
   max-height: 45px;
   float: left;
   padding: 5px 0;
+}
+
+.item-box {
+  color: black;
 }
