--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -4,11 +4,22 @@
   bottom: 0;
   min-width: 100%;
   min-height: 100%; */
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
   right: 0;
   bottom: 0;
+  min-height: 100%;
+  min-width: 100%;
+  width: auto;
+  height: 100%;
+  z-index: auto;
+}
+
+body{
+  background-image: url(../images/lany-background.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size:cover;
 }
 
 .header {
