--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -11,12 +11,14 @@ html, body {
   margin: 0;
   padding: 0;
   color: black;
+  letter-spacing: .5px;
 }
 
 div.header {
   width: 100%;
   height: 100px;
-  padding: 25px;
+  padding: 20px;
+  /* box-shadow: 1px 1px 1px grey; */
 }
 
 nav {
@@ -41,6 +43,8 @@ nav ul li{
     display: inline-block;
     list-style-type: none;
     padding-left: 60px;
+    letter-spacing: 1px;
+    font-size: 18px;
 }
 
  ul {
@@ -56,5 +60,9 @@ nav ul li{
 }
 
 .nav-links a:hover {
+  color: blue;
+}
+
+.nav-links a.active {
   color: blue;
 }
