--- a/assets/stylesheets/tour.css
+++ b/assets/stylesheets/tour.css
@@ -27,6 +27,8 @@ table, h1, p {
 
 table{
   width: 80%;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 h1 {
@@ -35,7 +37,7 @@ h1 {
 
 div.tour {
   position: fixed;
-  bottom: 70px;
+  top: 200px;
   right: 0px;
   width: 700px;
 }
@@ -58,8 +60,14 @@ a {
   background: rgba(0,0,0,.3);
   }
 
-/* How do I make the ticket icon bigger? */
-.fa fa-ticket {
-  width: 50px;
-  height: 50px;
+.text-logo {
+  max-height: 40px;
+  float: left;
+  padding: 5px 0;
+}
+
+.text-logo h1{
+  font-size: 30px;
+  letter-spacing: 5px;
+  margin: 0px;
 }
