--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -20,10 +20,10 @@
   right: 0;
 }
 
-body{
+/* body{
   background-image: url(../images/lany-background.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size:cover;
-}
+} */
